# boids

./: Cargo.toml  README.md  bacon.toml
.cargo/: config.toml
src/: components.rs  input.rs  main.rs  map.rs  resources.rs  spawner.rs  utils.rs
src/systems/: camera_control.rs  chaseplayer.rs  collisions.rs  flock.rs  log_state.rs  mod.rs  render_boids.rs  spatial_partition.rs  text.rs
