[package]
name = "bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_rand = { version = "0.14.2", features = ["wasm_js", "wyrand"] }
console_log = "1.0.0"
rand_core = "0.10.1"


[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.14", features = ["wasm_js"] }

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]
