[package]
name = "bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "dynamic_linking"] }
bevy_rand = { version = "0.14.2", features = ["wasm_js", "wyrand"] }
console_log = "1.0.0"
rand = "0.10.1"
rand_core = "0.10.1"


# Needed for bevy_rand on wasm
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.14", features = ["wasm_js"] }

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

